Add release notes and update code name
Changed Blasket to Copeland. Release notes added.
This finishes up mion-docs #179

Signed-off-by: Katrina Prosise <igorina@toganlabs.com>

--- a/docs/release_notes/2021-03.md
+++ b/docs/release_notes/2021-03.md
@@ -1,2 +1,133 @@
-# 2021.03 "Blasket" Release Notes
+# mion dunfell-2020.03 "Copeland"
 
+The Network Grade Linux project is very proud to present the third release of
+mion, code-named "Copeland". This version contains support for the Barefoot SDE,
+the replacement of Busybox with full applications, development images as well
+as extensive improvements to the documentation and numerous bug fixes and other
+minor improvements. 
+
+#### Main features and improvements
+
+- New BSP: QEMU -- for development and automated ptest/qa testing
+- Barefoot SDE (meta-mion-sde) -- Initial reference implementation for the Barefoot SDE 9.3
+- Initial support for UEFI Secure Boot on APSN switches (Secure ONIE + signed kernel)
+- Busybox replaced with full suite of Linux utilities
+- Docs migrated to MkDocs and versioned per release
+- Extensive documentation cleanup, addition of community landing page, addition of developer focused wiki
+- Added support for development images with packagegroup-dev-mion (development/debugging tools)
+
+#### Notable bug fixes
+
+- onlpd service not working (meta-mion#67)
+- BF2556X-1T platform scripts added to image (meta-mion-bsp#37)
+- build failures fixed when using sstate_cache but empty tmp_glibc (meta-mion#57)
+- BF2556X-1T onlps error when reading from SFP port (meta-mion-bsp#31)
+
+#### Errata of known issues
+
+- GRUB menu install failure with old version of ONIE (meta-mion#63)
+- NFSD fails to start due to missing kernel module (meta-mion#87)
+- Kernel panic on shutdown with irq_debug.ko (meta-mion-bsp#27)
+- Intermittent build failures on BF6064X-T (meta-mion-bsp#30)
+- Cannot Access BfRt Python CLI Through bfshell (meta-mion-sde#12)
+- BF2556X-1T - Issue with port state on Barefoot SDE (meta-mion-sde#18)
+- <https://docs.mion.io> fails multiple accessibility checks (mion-docs#183)
+- bf_python is an incomplete build/install and fails on import __struct (meta-mion-sde#19)
+
+## Git Log
+
+```
+*** mion ***
+
+- be5738d Update submodules before 2021.03 release
+- 81a8e70 Update submodules and add meta-intel to bblayers
+- 74e2cbc Updating submodules.
+- c0f0e1a bblayers.conf: remove meta-mion-sde for now
+- 0f24bf7 Update submodules for meta-mion-sde
+- 0cea8c1 local.conf: Add Secure Boot options
+- 5b4c242 Add meta-intel for secure boot signing
+- 31e5867 mion: Updating submodules.
+- 95311ee Continue flag `-k` should be an optional flag and not run all the time.
+- e3c9d83 Add continue flag to bitbake builds
+- adfbab5 Updating core OS submodules.
+- b2aed48 Add information for running bitbake outside of mc_build.sh
+- 1ea4c00 Add "new" label to all new issues
+- 6abd231 Add bug report and feature request templates
+
+*** meta-mion ***
+
+- da58019 mion.conf: Bump DISTRO_VERSION
+- a0a01d9 onlpv1: Fix onlpdump service
+- a4ade76 os-release.bbappend: MION_BUILD_ID does not exist
+- e5094d4 Update packages in core and dev
+- ae69c43 Convert dev image .inc to packagegroup
+- 8d0d974 mion images: Move from IMAGE_INSTALL +=
+- 6da58a4 Initial dev image .inc file
+- 7871ddd mion-image-core.inc: Remove and replace busybox
+- 64824c9 Revert the onie tools to the provided examples
+- 4eafa72 Add dev-pkgs to fix onlpdump.py libs linking issue
+- 726c3f8 mion.conf: Clean up DISTRO_FEATURES in mion.conf
+- 8ed961d Initial support for UEFI Secure Boot
+- d2867db install.sh: Use max available disk space by default
+- 6f644bc Update the sources in the README
+- 0a1bae0 mion.conf: change DISTRO_VERSION to snapshot
+
+*** meta-mion-bsp ***
+
+- 95aa97d meta-mion-stordis/conf/machine/*: Add platform service
+- 8097f21 onlpv*.bbappend: Switch remotes
+- 09606ee Add support for qemu
+- 8ede604 Revert APS Networks remotes
+- ef2bb83 meta-mion-stordis: Update onlpv* remotes
+- e8965de Remove Fetcher SSH Requirement
+
+*** meta-mion-sde ***
+
+- d82a5bf README: Add actual details and documentation for the barefoot sde
+- 17e24f2 meta-mion-barefoot: Add SPDX License identifiers
+- 93f4fde barefoot-bsp_9.3.0: Cleanup unclean packaging
+- 95ff95d bf-drivers: Build using barefoot runtime
+- 4f2cd96 bf-drivers_9.3.0.bb: disable thrift and install roms
+- f33d9dc Add P4 Examples to Image
+- 4fc41cc barefoot-bsp_9.3.0: prefix to STAGING DIR
+- 7e2f450 bf-utils: require libedit and remove third party libedit files
+- fc362fd barefoot-bsp_9.3.0: Fix host contamination
+- 55fe24d barefoot-bsp_9.3.0.bb: Add kernel module
+- 65f2086 barefoot-bsp_9.3.0.bb: Add gettext
+- 82cbfbb pi: more branch renaming
+- ab919ad packagegroup-sde-barefoot: Add the BSP recipe
+- 1282db9 README: Add intial README
+- e049155 Merge pull request #2 from NetworkGradeLinux/dunfell-next
+- 3c85784 mv-pipe-config: Remove recipe
+- a71c4da pi_0.0.1.bb: Switch branch name
+- 7a33652 barefoot-bsp: Add a working bsp recipe (formerly bf2556-1t-bsp)
+- 07abf42 meta-mion-barefoot: bump to 9.3.0
+- 5c4f375 meta-mion-sde/meta-mion-barefoot: Initial commit
+
+*** mion-docs ***
+
+- 1506cd8 Update home page
+- 963ff21 Add supported switch table
+- 980ffbb Sync changes made in gh-pages
+- 8ec9fed Update CONTRIBUTING.md
+- 00bbbab Remove outdated info
+- ac206ad Merge branch 'dunfell' into kprosise/mkdocs
+- 1d61a7e Resolve merge conflicts
+- d4323c4 Scrub down mion docs
+- c3efa76 Replace Jekyll with mkdocs
+- 8bece85 Convert mion-docs to mkdocs
+- 338419e Replace Jekyll with mkdocs
+- 46ac520 Missed a line, changed SSH to HTTPS
+- a36301d Changed clone URI to use https
+- 38adc28 Convert mion-docs to mkdocs
+- f75f8fe Remove _meta/ folder and contents
+- 8a4b08d Clarify use of needed variables to run bitbake
+- 5e35801 Move Community.md out of drafts into main docs
+- ddaacbe Change doc homepage to serve as project entry point
+- 6854c94 Add to how to run bitbake commands directly in docs/getting-started.md
+- f28761f Update index.md
+- 4ca2ba8 Add recommendation of introducing folks
+- c2bb0f8 Add draft for new documentation homepage Signed-off-by: Katrina Prosise <igorina@toganlabs.com>
+- d843e95 Add draft version of community page in _drafts for review
+- 220cd8f Add link to the oe styleguide for recipes
+```
